================================================================
This is a modified version of LorePlay, originally by Justinon.
================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0

- Updated embedded LibEventHandler version to 1.2.91 (AddOnVersion: 1291).

Version 1.6.74 : by Calamath
- Russian language support
- optional LibDebugLogger V2.x support
[IdleEmotes]:Fixed an unintended behavior of IdleEmotes. This is a known issue inherited from the LorePlay standard version.
- Addressed an issue that could cause the idle emote to play shortly after the player interaction ended.
- Changed the waiting time before playing the idle emote from 10 seconds to 20 seconds. You will be able to adjust the waiting time in future versions.
[LoreWear]:Adjusted location database.
- Addressed an issue that did not correctly recognize Hollow City in Coldharbour.
- Updated database for Dragonhold DLC. Black Heights in Southern Elsweyr will be recognized as a city.

Version 1.6.73 : by Calamath
[LoreWear]small optimizations for some unnatural movements in automatic wearing.
-- no longer changes outfits right after login.
-- no longer wearing your favorite wet suit during battles, even if you select "use wetsuit" option.
-- no longer wearing your favorite combat uniform while riding or swimming, even if you select "use combat uniform" option.
-- no longer wearing a helmet while swimming, even if you select "turn off 'hide your helm' during combat" option.
-- no longer changes your favorite wet suit if you ninja players skipping across the water. (effective after Update 25)

Version 1.6.72 : by Calamath
[HotFix] Fixed a bug that a new LorePlay user would get a nil error when launching the game. Thanks Melhael for the report.

Version 1.6.71 : by Calamath